--- a/techandtoolsreact/package.json
+++ b/techandtoolsreact/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@syncfusion/ej2-react-navigations": "^24.1.46",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-tab-view": "^3.5.2",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
