--- a/techandtoolsreact/package.json
+++ b/techandtoolsreact/package.json
@@ -13,7 +13,7 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-tab-view": "^3.5.2",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
