--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-navigation/material-top-tabs": "^6.6.5",
     "global": "^4.4.0",
+    "mysql": "^2.18.1",
     "react-native-pager-view": "^6.2.3",
     "react-native-tab-view": "^3.5.2",
     "react-router-dom": "^6.21.3",
