--- a/techandtoolsreact/package.json
+++ b/techandtoolsreact/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.8.0",
+    "package": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-tab-view": "^3.5.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
