--- a/techandtoolsreact/package.json
+++ b/techandtoolsreact/package.json
@@ -18,6 +18,9 @@
     "react-native-tab-view": "^3.5.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.3",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
