--- a/techandtoolsreact/package.json
+++ b/techandtoolsreact/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@netlify/functions": "^2.5.1",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@syncfusion/ej2-react-navigations": "^24.1.46",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.21",
     "crypto-browserify": "^3.12.0",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.8.0",
     "package": "^1.0.1",
@@ -18,6 +21,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "serverless-http": "^3.2.0",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
     "url": "^0.11.3",
